# perseus-test

./: .gitignore  Cargo.toml  bonnie.toml  package-lock.json  tailwind.config.js
.cargo/: config.toml
src/: main.rs  tailwind.css
src/api/: mod.rs
src/templates/: counter.rs  hello.rs  index.rs  mod.rs
